[package]
name = "y-lang"
version = "0.1.0"
edition = "2024"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/y-lang"

[workspace]
members = ["crates/why_lib", "crates/lex_derive"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower-lsp-server = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
why_lib = { path = "./crates/why_lib" }
