[package]
name = "why_lib"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/pesca-parser"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
lex_derive = { path = "../lex_derive/" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
