[package]
name = "why_lib"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/y-parser"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
serde = { version = "1.0.226", features = ["derive"] }
sha2 = "0.10.9"
unescape = "0.1.0"
rust-sitter = "0.4.5"

[build-dependencies]
rust-sitter-tool = "0.4.5"
